removed fixed bg-attachment from name-section bg to test error on mobile devices

--- a/css/name-section.scss
+++ b/css/name-section.scss
@@ -15,7 +15,7 @@
     color: white;
     //background: url('images/shreveport.png');
     background: url('../images/shreveport.jpg');
-    background-attachment: fixed;
+    //background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
